--- a/css/style.css
+++ b/css/style.css
@@ -204,3 +204,24 @@ html[lang="ar"] h1, html[lang="ar"] h2, html[lang="ar"] p {
         width: 80%;
     }
 }
+
+.language-selection {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.language-selection .btn {
+    display: inline-block;
+    margin: 10px;
+    padding: 15px 25px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 18px;
+    transition: background-color 0.3s ease;
+}
+
+.language-selection .btn:hover {
+    background-color: #555;
+}
